AC_INIT(configure.in)

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(mjs4, 4.0)

AC_LANG_C
AC_PROG_CC
AM_PROG_LIBTOOL

AC_CHECK_HEADER([ncurses.h], [], AC_MSG_ERROR([Couldn't find ncurses headers.]))

AC_CHECK_HEADER([panel.h], [], AC_MSG_ERROR([Couldn't find panel headers.]))

AC_CHECK_HEADER([xine.h], [], AC_MSG_ERROR([Couldn't find libxine headers.]))

AC_CHECK_LIB(xine, xine_init, , AC_ERROR([Couldn't find xine library]), -lxine, )

AC_CHECK_LIB(ncurses, refresh, , AC_ERROR([Couldn't find ncurses library]), -lncurses, -ldl)

AC_CHECK_LIB(panel, refresh, , AC_ERROR([Couldn't find panel library]), -lpanel, )

AC_OUTPUT(Makefile src/Makefile src/config/Makefile src/controller/Makefile \
	src/engine/Makefile src/gui/Makefile src/songdata/Makefile)
