INCLUDES = -I$(top_srcdir)/src $(all_includes)
noinst_LIBRARIES = libgui.a
libgui_a_SOURCES = gui.c misc.c tokens.c window_files.c window_info.c \
	window_menubar.c window_play.c window_playback.c
noinst_HEADERS = gui.h misc.h tokens.h
_SOURCES = play_window.h
_SOURCES = play_window.h window_play.h
_SOURCES = play_window.h window_info.h window_play.h
_SOURCES = play_window.h window_files.h window_info.h window_play.h
_SOURCES = play_window.h window_files.h window_info.h window_menubar.h \
	window_play.h
_SOURCES = play_window.h window_files.h window_info.h window_menubar.h \
	window_play.h window_playback.h
_SOURCES = play_window.h window.h window_files.h window_info.h window_menubar.h \
	window_play.h window_playback.h
